fix: fix dark mode

--- a/js30-image-gallery/style.css
+++ b/js30-image-gallery/style.css
@@ -92,7 +92,7 @@
 
 .svg_mode {
     cursor: pointer;
-    transition: all 1s ease;
+    transition: all .3s ease;
     color: #5f6368;
 }
 
@@ -106,7 +106,7 @@
     position: relative;
 }
 
-.search_form input {
+#search {
     width: 100%;
     height: 100%;
     padding-left: 1rem;
@@ -115,12 +115,12 @@
     font-size: 1rem;
     outline: none;
     transition: all 0.30s ease-in-out;
-    
+    color: #616161;
 }
+
 .search_form input:focus {
     box-shadow: 0 0 .3rem  #26a69a;
 }
-
 
 .search_icon {
     position: absolute;
@@ -134,7 +134,7 @@
 
 .svg {
     cursor: pointer;
-    transition: all 1s ease;
+    transition: all .3s ease;
     color: #5f6368;
 }
 
@@ -145,7 +145,6 @@
 .close_svg {
     opacity: 0;
     visibility: hidden;
-    
 }
 
 /* Main */
@@ -165,6 +164,7 @@
     margin-top: 1rem;
     background-repeat: no-repeat;
     background-size: cover;
+    border-radius: 5px;
 }
 
 @media (max-width: 768px) {
